--- a/public/stylesheets/library.css
+++ b/public/stylesheets/library.css
@@ -4569,22 +4569,27 @@ div#container .top-bar .top-bar_container .top-bar-title {
   font-size: 1.75rem;
   letter-spacing: 0.3rem;
 }
-div#container .top-bar .top-bar_container ul {
+div#container .top-bar .top-bar_container ul.menu {
   background-color: #F06D64;
 }
-div#container .top-bar .top-bar_container ul li {
+div#container .top-bar .top-bar_container ul.menu li.menu-item {
   height: 5.625rem;
-}
-div#container .top-bar .top-bar_container ul li a {
   color: #fefefe;
 }
-div#container .top-bar .top-bar_container ul li a:hover {
+div#container .top-bar .top-bar_container ul.menu li.menu-item a {
+  color: #fefefe;
+}
+div#container .top-bar .top-bar_container ul.menu li.menu-item a:hover {
   color: #F06D64;
   transition: color 0.5s;
 }
-div#container .top-bar .top-bar_container ul li:hover {
+div#container .top-bar .top-bar_container ul.menu li.menu-item:hover {
   background-color: #fefefe;
   transition: background-color 0.5s;
+}
+div#container .top-bar .top-bar_container ul.menu li.menu-item:hover a {
+  color: #F06D64;
+  transition: color 0.5s;
 }
 
 #push, footer {
@@ -4598,7 +4603,7 @@ footer div#footer_inner {
   margin: 0 auto;
 }
 footer div#footer_inner a {
-  margin-left: 10px;
+  margin-left: 1.25rem;
   line-height: 3.75rem;
 }
 footer div#footer_inner a:hover {
